# placepython-wagtail-backerydemo

./: .env.exemple  README.md  compose.yml  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
bakerydemo/: wsgi.py
bakerydemo/settings/: base.py  dev.py  production.py
bakerydemo/templates/includes/: header.html
bakerydemo/templatetags/: backerydemo_tags.py
